k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-grand-premium-outlet
  namespace: auto-grand-premium-outlet
  labels:
    app: auto-grand-premium-outlet
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: auto-grand-premium-outlet
  template:
    metadata:
      labels:
        app: auto-grand-premium-outlet
    spec:
      containers:
        - name: app
          image: nafreire/auto-grand-premium-outlet:1.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          command:
            - ./auto_grand_premium_outlet/bin/auto_grand_premium_outlet
          args:
            - start
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/vehicles/available
              port: 4000
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/vehicles/available
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: static-files
              mountPath: /app/auto_grand_premium_outlet/lib/auto_grand_premium_outlet_web-0.1.0/priv/static
              readOnly: true
      volumes:
        - name: static-files
          configMap:
            name: static-files-config
            optional: true
